# inventary

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile.combined  QUICKSTART.md  README.md  build.sh  build_mobile.sh  deploy_server.sh  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/20240101000000_create_inventory_items/: down.sql  up.sql  up.sql.postgres
backend/migrations/2026-01-17-232520-0000_create_users/: down.sql  up.sql
backend/migrations/2026-03-15-000000_update_users_for_auth/: down.sql  up.sql
backend/migrations/2026-03-21-000000_add_units_and_custom_items/: down.sql  up.sql
backend/migrations/2026-03-21-000001_create_custom_and_pending_products/: down.sql  up.sql
backend/migrations/2026-03-22-205043_create_categories/: down.sql  up.sql
backend/migrations/2026-03-28-000000_add_category_language_to_inventories/: down.sql  up.sql
backend/migrations/2026-03-28-000001_add_external_name_to_categories/: down.sql  up.sql
backend/src/: handlers.rs  handlers_postgres.rs  main.rs  models.rs  openfoodfacts.rs  schema.rs  tests.rs
frontend/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  manifest.json  nginx.conf  styles.css  sw.js
frontend/locales/: cs.json  en.json
frontend/src/: api.rs  app.rs  barcode.rs  components.rs  down.sql  i18n.rs  lib.rs  router.rs
frontend/src/components/: admin.rs  barcode_scanner.rs  category_manager.rs  custom_item_manager.rs  inventory_list.rs  inventory_selection.rs  login.rs  main_menu.rs  profile.rs  reset_password.rs  share_inventory.rs
tests/: e2e_full_test.sh  e2e_smoke_test.sh
