[package]
name = "inventary-backend"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["sqlite", "postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
urlencoding = "2.1"
