[package]
name = "inventary-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "HtmlOptionElement",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "Navigator",
    "MediaDevices",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "ImageData",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
gloo-storage = "0.2"
gloo-utils = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
urlencoding = "2.1"
gloo-timers = { version = "0.3", features = ["futures"] }
